# ru-rock-ai-music-service

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE_PENDING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark-run.md  model-backend-spike.md
.github/workflows/: ci.yml
benchmark/: README.md
docs/: README.md
docs/api/: openapi.json
docs/architecture/: 04_architecture.md  05_api_contract.md  07_generation_pipeline.md  09_gpu_farm_integration.md  10_maturity_deployment_and_quality.md
docs/delivery/: 11_acceptance_criteria.md  12_implementation_plan.md  14_codex_work_items.md  16_acceptance_profiles.md
docs/engineering/: naming_conventions.md  session_handoff.md
docs/research/: 06_model_selection.md  08_finetuning_and_configuration.md  10_evaluation_benchmark.md  13_risks_and_unknowns.md
docs/task/: 00_bounded_context.md  01_formal_task.md  02_terms_local_model_and_gpu_farm.md  03_roles_and_scope.md  15_fpf_trace.md
rock_music_generator/: __init__.py  main.py
rock_music_generator/api/: routes.py  schemas.py
rock_music_generator/core/: config.py
rock_music_generator/models/: __init__.py  backend.py  mock_backend.py
rock_music_generator/storage/: artifact_store.py
rock_music_generator/workers/: __init__.py  job_store.py
scripts/: export_openapi.py  run_mock_smoke.py
tests/: test_api.py
